--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "from": "^0.1.7",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-phone-number-input": "^3.4.8",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "type": "^2.7.3",
+    "value": "^0.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
