--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@sentry/nextjs": "^8.35.0",
+    "@sentry/nextjs": "^8.37.1",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,7 +27,7 @@
     "input-otp": "^1.2.4",
     "libphonenumber-js": "^1.11.12",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^15.0.3-canary.7",
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
     "react": "^18",
