--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-   
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,7 +26,7 @@
     "input-otp": "^1.2.4",
     "libphonenumber-js": "^1.11.12",
     "lucide-react": "^0.453.0",
-    "next": "14.2.3",
+    "next": "^14.2.17",
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
     "react": "^18",
@@ -35,7 +34,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
     "react-hook-form": "^7.53.0",
-    "react-phone-number-input": "^3.4.8",
+    "react-phone-number-input": "^3.4.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "type": "^2.7.3",
